welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: type mismatch;
 found   : Unit
 required: Int
  while (compteur != num) {
  ^